# Temp32Project

./: .clangd  .gitignore  CHANGELOG_MODULAR_REFACTOR.md  CMakeLists.txt  DEVICE_REFACTOR_SUMMARY.md  README.md  build.py  compile_flags.txt  download.py  idea.cfg  project_config.json
.cache/clangd/index/: cmsis_clang.h.0B2DF108DE33AF4C.idx  cmsis_clang_m.h.D85BB660816D7F59.idx  cmsis_compiler.h.D42341E544CCB94A.idx  cmsis_version.h.4084672692452A58.idx  control.c.755E964330C33547.idx  core_cm3.h.ED8A7D8EFFA9E5DA.idx  init.c.D5BD34AD88748E73.idx  init.h.ECA39287372F2C3E.idx  main.c.6CFD540034A871F7.idx  startup_stm32f10x_md.c.30FA26FA80C10FA5.idx  stm32f10x.h.8AF7835836EAD430.idx  stm32f10x_it.c.A015E6B63AE38DF2.idx  stm32f10x_it.h.A0831D5C26C1AE43.idx  system_stm32f10x.c.8DD64A9846BEAD1E.idx  system_stm32f10x.h.B27BF0D4B65E18AB.idx
BSP/CORE/: startup_stm32f10x_md.c  stm32f10x.ld
BSP/Driver/: delay.c  driver.h  i2c_bus.c  misc.h  oled_dev.c  sh1106_iic.c  usart.c
BSP/Driver/flash/: flash.h
BSP/stm32f1/CORE/: __CMakeLists.txt  startup_stm32f10x_md.c  stm32f10x_it.c  stm32f10x_it.h
BSP/stm32f1/Driver/: Systick.c  adc.c  delay.c  driver.h  i2c_bus.c  i2c_dev.c  irq.c  led.c  misc.c  nvic.c  oled_dev.c  spi_bus.c  spi_dev.c  usart.c
BSP/stm32f1/Driver/flash/: flash.c  flash_example.c
BSP/stm32f1/Driver/sh1106/: driver_sh1106.c  driver_sh1106.h
BSP/stm32f1/f103/: f103_adc.c  f103_adc.h  f103_bsp.h  f103_gpio.c  f103_gpio.h  f103_i2c.c  f103_i2c.h  f103_spi.c  f103_spi.h  f103_tim.c  f103_tim.h  f103_usart.c  f103_usart.h
BSP/stm32f1/f103/c6t6/: c6t6_bsp.h  c6t6_config.h  stm32f1c6t6.ld
BSP/stm32f1/f103/c8t6/: c8t6_bsp.h  c8t6_config.h
BSP/stm32f4/CORE/: startup_stm32f40_41xxx.c  stm32f4xx_it.c
BSP/stm32f4/Driver/: Systick.c  adc.c  bsp_hal.c  bsp_hal.h  delay.c  driver.h  i2c_bus.c  i2c_dev.c  led.c  misc.c  nvic.c  usart.c
BSP/stm32f4/Driver/f407/: f407_usart.h
BSP/stm32f4/Driver/vet6/: vet6_adc.c  vet6_adc.h  vet6_bsp.h  vet6_config.h  vet6_dac.c  vet6_dac.h  vet6_gpio.c  vet6_gpio.h  vet6_i2c.c  vet6_i2c.h  vet6_spi.c  vet6_spi.h  vet6_tim.c  vet6_tim.h  vet6_usart.c  vet6_usart.h
BSP/stm32f4/Driver/vgt6/: vgt6_adc.h  vgt6_bsp.h  (+6 more)
BSP/stm32f4/f407/: f407_adc.c  f407_adc.h  f407_bsp.h  f407_dac.c  f407_dac.h  f407_gpio.c  f407_gpio.h  f407_i2c.c  f407_i2c.h  f407_spi.c  f407_spi.h  f407_tim.c  f407_tim.h  f407_usart.c
Control/: filter.c  filter.h  pid.c  pid.h
Device/: config.h  device_hal.c  device_hal.h  device_init.c  device_init.h
Device/bmp280/: bmp280.c  bmp280.h
Device/hmc588/: hmc588.c  hmc588.h
Device/mpu6050/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.h  mpu6050.h
Device/sh1106/: fonts.c  fonts.h  front.c  front.h  sh1106.c  sh1106.h
Device/ssd1306/: fonts.c  fonts.h  ssd1306.c  ssd1306.h
Device/st7789/: st7789.c  st7789.h
Driver/: Systick.c  adc.c  delay.c  driver.h  led.c  nvic.c  sh1106_iic.c  usart.c
Driver/flash/: README.md  flash.c  flash.h  flash_example.c
Driver_Framework/: dev_frame.c  dev_frame.h  dev_model_core.c  dev_model_core.h  df_adc.h  df_delay.h  df_gpio.h  df_init.c  df_init.h  df_led.h  df_log.c  df_log.h  df_uart.h
Driver_Framework/display/: df_display.c  df_display.h
Driver_Framework/i2c/: df_iic.c  df_iic.h
Driver_Framework/irq/: df_irq.c  df_irq.h
Driver_Framework/key/: CMakeLists.txt  df_key.c  df_key.h
Driver_Framework/lcd/: df_fonts.c  df_fonts.h  df_lcd.c  df_lcd.h  fonts.c  fonts.h
Driver_Framework/led/: df_led.c  df_led.h
Driver_Framework/linker/: df_init_gcc.ld  df_init_iar.icf  df_init_keil.sct  df_init_sections.ld
Driver_Framework/shell/: df_shell.c  df_shell.h
Driver_Framework/spi/: df_spi.c  df_spi.h
MDK/: Debug.BAT  General_template_Project.uvmpw  General_template_Project.uvmpw.uvgui.ktkuri  JLinkLog.txt  adc.__i  adc.d  control.__i  control.d  delay.__i  delay.d  filter.__i  filter.d  gpio_stm32f10x.d  init.__i  init.d  irq.__i  irq.d  key.d  led.__i  led.d  main.__i  main.d  mdk_project.build_log.htm  mdk_project.lnp  mdk_project.map  mdk_project.uvguix.34575  mdk_project.uvguix.ktkuri  mdk_project.uvoptx  mdk_project.uvprojx  mdk_project_Debug.dep  mdk_project_f407.uvguix.ktkuri  mdk_project_f407.uvoptx  mdk_project_f407.uvprojx  misc.__i  misc.d  nvic.__i  nvic.d  pid.__i  pid.d  sf_iic.d  (+24 more)
MDK/.eide/: eide.yml  env.ini  files.options.yml
MDK/Listings/: mdk_project.map  mdk_project_f407.map  startup_stm32f10x_md.lst
MDK/Objects/: adc.d  control.d  delay.d  dev_frame.d  df_display.d  df_fonts.d  df_iic.d  df_key.d  df_lcd.d  df_spi.d  filter.d  flash.d  flash_example.d  fonts.d  fonts_1.d  gpio_stm32f10x.d  i2c_bus.d  i2c_dev.d  init.d  inv_mpu.d  inv_mpu_dmp_motion_driver.d  irq.d  key.crf  key.d  led.d  main.d  mdk_project.axf  mdk_project.build_log.htm  mdk_project.hex  mdk_project.htm  mdk_project.lnp  mdk_project_Debug.dep  mdk_project_f103_project.dep  mdk_project_f407.axf  mdk_project_f407.build_log.htm  mdk_project_f407.htm  mdk_project_f407.lnp  mdk_project_f407_f407_project.dep  mdk_project_mdk_porject.dep  misc.d  (+33 more)
MDK/RTE/_Debug/: RTE_Components.h
MDK/RTE/_Target_1/: RTE_Components.h
Middleware/shell/: shell.c  shell.h  shell_style.h
Middleware/trans/: CMakeLists.txt  stde.c  stde.h  terminal_link.c  terminal_link.h
app/: init.c  irq.c  main.c  main.h  test.c  test_auto_init.c
doc/: Device_HAL_Refactor.md  Device_Refactor_Comparison.md  J-Link支持说明.md  J-Link调试配置说明.md  README.md  VS Code实时变量监视说明.md  debugging.md  device_hal.md  实时监视快速指南.md  实时监视演示代码.c
doc/build_system/: 01_构建系统概述.md  02_模块结构说明.md  03_重构总结.md  04_模块化重构说明.md  05_快速使用指南.md  06_设备驱动裁剪指南.md  07_Device_config_h自动生成说明.md  08_设备驱动宏系统更新日志.md
doc/driver_framework/: 01_框架优化指南.md  02_使用示例.md  03_分散自动初始化说明.md
doc/linker/: 01_链接脚本集成说明.md  02_独立链接脚本说明.md  03_构建配置说明.md  04_构建系统更新说明.md
tool/: .gitignore  build.py  chip_detector.py  cmake_generator.py  compile_flags.txt  config_generator.py  download.py  env_config.json  env_setup.py  flash_simple.jlink  idea.cfg  project_config.json  project_config.py  source_scanner.py  vscode_config_generator.py  watch_config.py  watch_env.py
(+6 files in other folders)
